fix for MOB-1666 - IE 7 z-index issues with calendars and audit log
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@16595 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/modules/dod-5015-share/source/web/components/console/rm-audit.css
+++ b/root/modules/dod-5015-share/source/web/components/console/rm-audit.css
@@ -18,6 +18,8 @@
 .audit-log .yui-u
 {
    width: 100%;
+   margin:0;
+   float:none;
 }
 .audit-log
 {
@@ -97,6 +99,8 @@
    background-color:#DDD;
    height:10em;
    margin-top:1em;
+   z-index:10000;
+   position:relative;
 }
 #filters .yui-u.first
 {
